--- a/src/Verkter/Bundle/AppBundle/Resources/config/jobs.yml
+++ b/src/Verkter/Bundle/AppBundle/Resources/config/jobs.yml
@@ -11,8 +11,8 @@ services:
             - '@akeneo_batch.job_repository'
             -
                 - '@pim_connector.step.charset_validator'
-                - '@pim_connector.step.csv_product.import'
-                - '@pim_connector.step.csv_product.import_associations'
+                - '@pim_connector.step.xlsx_product.import'
+                - '@pim_connector.step.xlsx_product.import_associations'
             - true
         tags:
             - { name: akeneo_batch.job, connector: '%verkter_connector.connector_name.csv%', type: '%pim_connector.job.import_type%' }
