--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
         ]
     },
     "require": {
-        "akeneo/pim-community-dev": "^5.0.0"
+        "akeneo/pim-community-dev": "^5.0.0",
+        "akeneo/api-php-client": "^6.0",
+        "php-http/guzzle6-adapter": "^2.0",
+        "http-interop/http-factory-guzzle": "^1.0"
     },
     "require-dev": {
         "doctrine/doctrine-migrations-bundle": "1.3.2",
