--- a/src/Hummingbird/Bundle/XlsxConnectorBundle/Resources/config/steps.yml
+++ b/src/Hummingbird/Bundle/XlsxConnectorBundle/Resources/config/steps.yml
@@ -7,7 +7,7 @@ services:
                 - '@akeneo_batch.job_repository'
                 # - '@pim_connector.reader.file.xlsx_product'
                 - '@hummingbird_xlsx_connector.reader.file.xlsx_product'
-                - '@acme.connector.processor.custom_xlsx'
+                - '@hummingbird.connector.processor.custom_xlsx'
                 # - '@pim_connector.processor.denormalization.product'
                 - '@pim_connector.writer.database.product'
                 - 10
